--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,11 +3,11 @@
 
 
     <color name="purple_200">#FFBB86FC</color>
-    <color name="purple_500">#FF6200EE</color>
-    <color name="purple_700">#FF3700B3</color>
-    <color name="teal_200">#FF03DAC5</color>
-    <color name="teal_700">#FF018786</color>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="purple_500">#1de9b6</color>
+    <color name="purple_700">#c48b9f</color>
+    <color name="teal_200">#FF000000</color>
+    <color name="teal_700">#00b686</color>
+    <color name="black">#ffeeff</color>
+    <color name="white">#FF000000</color>
 
 </resources>
